@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,24 +23,26 @@
 
 /*
  * @test
- * @modules java.base/sun.nio.ch
- *          jdk.incubator.foreign/jdk.internal.foreign
+ * @enablePreview
+ * @modules java.base/sun.nio.ch java.base/jdk.internal.foreign
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestByteBuffer
  */
 
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.MemoryLayout.PathElement;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SequenceLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemoryLayout.PathElement;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SequenceLayout;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.lang.ref.Cleaner;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -65,6 +67,7 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -80,13 +83,13 @@ import org.testng.SkipException;
 import org.testng.annotations.*;
 import sun.nio.ch.DirectBuffer;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_CHAR;
-import static jdk.incubator.foreign.ValueLayout.JAVA_DOUBLE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_FLOAT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_LONG;
-import static jdk.incubator.foreign.ValueLayout.JAVA_SHORT;
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
+import static java.lang.foreign.ValueLayout.JAVA_CHAR;
+import static java.lang.foreign.ValueLayout.JAVA_DOUBLE;
+import static java.lang.foreign.ValueLayout.JAVA_FLOAT;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
+import static java.lang.foreign.ValueLayout.JAVA_SHORT;
 import static org.testng.Assert.*;
 
 public class TestByteBuffer {
@@ -105,39 +108,26 @@ public class TestByteBuffer {
         }
     }
 
+    static final ValueLayout.OfChar BB_CHAR = JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+    static final ValueLayout.OfShort BB_SHORT = JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+    static final ValueLayout.OfInt BB_INT = JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+    static final ValueLayout.OfLong BB_LONG = JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+    static final ValueLayout.OfFloat BB_FLOAT = JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+    static final ValueLayout.OfDouble BB_DOUBLE = JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(8);
+
     static SequenceLayout tuples = MemoryLayout.sequenceLayout(500,
             MemoryLayout.structLayout(
-                    JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN).withName("index"),
-                    JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN).withName("value")
+                    BB_INT.withName("index"),
+                    BB_FLOAT.withName("value")
             ));
 
-    static SequenceLayout bytes = MemoryLayout.sequenceLayout(100,
-            JAVA_BYTE
-    );
-
-    static SequenceLayout chars = MemoryLayout.sequenceLayout(100,
-            JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout shorts = MemoryLayout.sequenceLayout(100,
-            JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout ints = MemoryLayout.sequenceLayout(100,
-            JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout floats = MemoryLayout.sequenceLayout(100,
-            JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout longs = MemoryLayout.sequenceLayout(100,
-            JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout doubles = MemoryLayout.sequenceLayout(100,
-            JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN)
-    );
+    static SequenceLayout bytes = MemoryLayout.sequenceLayout(100, JAVA_BYTE);
+    static SequenceLayout chars = MemoryLayout.sequenceLayout(100, BB_CHAR);
+    static SequenceLayout shorts = MemoryLayout.sequenceLayout(100, BB_SHORT);
+    static SequenceLayout ints = MemoryLayout.sequenceLayout(100, BB_INT);
+    static SequenceLayout floats = MemoryLayout.sequenceLayout(100, BB_FLOAT);
+    static SequenceLayout longs = MemoryLayout.sequenceLayout(100, BB_LONG);
+    static SequenceLayout doubles = MemoryLayout.sequenceLayout(100, BB_DOUBLE);
 
     static VarHandle indexHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("index"));
     static VarHandle valueHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("value"));
@@ -160,7 +150,7 @@ public class TestByteBuffer {
     }
 
     static void initBytes(MemorySegment base, SequenceLayout seq, BiConsumer<MemorySegment, Long> handleSetter) {
-        for (long i = 0; i < seq.elementCount().getAsLong() ; i++) {
+        for (long i = 0; i < seq.elementCount() ; i++) {
             handleSetter.accept(base, i);
         }
     }
@@ -169,7 +159,7 @@ public class TestByteBuffer {
                                               Function<ByteBuffer, Z> bufFactory,
                                               BiFunction<MemorySegment, Long, Object> handleExtractor,
                                               Function<Z, Object> bufferExtractor) {
-        long nelems = layout.elementCount().getAsLong();
+        long nelems = layout.elementCount();
         long elemSize = layout.elementLayout().byteSize();
         for (long i = 0 ; i < nelems ; i++) {
             long limit = nelems - i;
@@ -192,12 +182,12 @@ public class TestByteBuffer {
 
     @Test
     public void testOffheap() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(tuples, scope);
-            initTuples(segment, tuples.elementCount().getAsLong());
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(tuples, session);
+            initTuples(segment, tuples.elementCount());
 
             ByteBuffer bb = segment.asByteBuffer();
-            checkTuples(segment, bb, tuples.elementCount().getAsLong());
+            checkTuples(segment, bb, tuples.elementCount());
         }
     }
 
@@ -205,10 +195,10 @@ public class TestByteBuffer {
     public void testHeap() {
         byte[] arr = new byte[(int) tuples.byteSize()];
         MemorySegment region = MemorySegment.ofArray(arr);
-        initTuples(region, tuples.elementCount().getAsLong());
+        initTuples(region, tuples.elementCount());
 
         ByteBuffer bb = region.asByteBuffer();
-        checkTuples(region, bb, tuples.elementCount().getAsLong());
+        checkTuples(region, bb, tuples.elementCount());
     }
 
     @Test
@@ -221,7 +211,7 @@ public class TestByteBuffer {
         try (FileChannel channel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             withMappedBuffer(channel, FileChannel.MapMode.READ_WRITE, 0, tuples.byteSize(), mbb -> {
                 MemorySegment segment = MemorySegment.ofByteBuffer(mbb);
-                initTuples(segment, tuples.elementCount().getAsLong());
+                initTuples(segment, tuples.elementCount());
                 mbb.force();
             });
         }
@@ -230,20 +220,22 @@ public class TestByteBuffer {
         try (FileChannel channel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
             withMappedBuffer(channel, FileChannel.MapMode.READ_ONLY, 0, tuples.byteSize(), mbb -> {
                 MemorySegment segment = MemorySegment.ofByteBuffer(mbb);
-                checkTuples(segment, mbb, tuples.elementCount().getAsLong());
+                checkTuples(segment, mbb, tuples.elementCount());
             });
         }
     }
 
     @Test
     public void testDefaultAccessModesMappedSegment() throws Throwable {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_WRITE, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, session);
             assertFalse(segment.isReadOnly());
         }
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_ONLY, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 8L, session);
             assertTrue(segment.isReadOnly());
         }
     }
@@ -254,17 +246,19 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             //write to channel
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
-            initTuples(segment, tuples.elementCount().getAsLong());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, tuples.byteSize(), session);
+            initTuples(segment, tuples.elementCount());
             segment.force();
         }
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
             //read from channel
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
-            checkTuples(segment, segment.asByteBuffer(), tuples.elementCount().getAsLong());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), session);
+            checkTuples(segment, segment.asByteBuffer(), tuples.elementCount());
         }
     }
 
@@ -274,10 +268,13 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 8, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
-        assertTrue(segment.isMapped());
-        segment.scope().close();
-        mappedBufferOp.apply(segment);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, session);
+            assertTrue(segment.isMapped());
+            segment.session().close();
+            mappedBufferOp.apply(segment);
+        }
     }
 
     @Test
@@ -290,9 +287,10 @@ public class TestByteBuffer {
 
         // write one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            try (MemorySession session = MemorySession.openConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
                 //write to channel
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), i, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, i, tuples.byteSize(), session);
                 initTuples(segment, 1);
                 segment.force();
             }
@@ -300,9 +298,10 @@ public class TestByteBuffer {
 
         // check one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            try (MemorySession session = MemorySession.openConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
                 //read from channel
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), session);
                 checkTuples(segment, segment.asByteBuffer(), 1);
             }
         }
@@ -320,8 +319,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, LARGE_SIZE, FileChannel.MapMode.READ_WRITE, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, LARGE_SIZE, session);
             segment.isLoaded();
             segment.load();
             segment.isLoaded();
@@ -357,18 +357,18 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferOps")
     public void testScopedBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
         Buffer bb;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, session);
             bb = bufferFactory.apply(segment.asByteBuffer());
         }
-        //outside of scope!!
+        //outside of session!!
         try {
             method.invoke(bb, args);
             fail("Exception expected");
         } catch (InvocationTargetException ex) {
             Throwable cause = ex.getCause();
             if (cause instanceof IllegalStateException) {
-                //all get/set buffer operation should fail because of the scope check
+                //all get/set buffer operation should fail because of the session check
                 assertTrue(ex.getCause().getMessage().contains("already closed"));
             } else {
                 //all other exceptions were unexpected - fail
@@ -383,8 +383,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferHandleOps")
     public void testScopedBufferAndVarHandle(VarHandle bufferHandle) {
         ByteBuffer bb;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, session);
             bb = segment.asByteBuffer();
             for (Map.Entry<MethodHandle, Object[]> e : varHandleMembers(bb, bufferHandle).entrySet()) {
                 MethodHandle handle = e.getKey().bindTo(bufferHandle)
@@ -417,8 +417,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider = "bufferOps")
     public void testDirectBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, session);
             Buffer bb = bufferFactory.apply(segment.asByteBuffer());
             assertTrue(bb.isDirect());
             DirectBuffer directBuffer = ((DirectBuffer)bb);
@@ -430,8 +430,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeOffheap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, session);
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -468,8 +468,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeRoundtripNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, session);
             initializer.accept(segment);
             MemorySegment second = MemorySegment.ofByteBuffer(segment.asByteBuffer());
             checker.accept(second);
@@ -477,10 +477,10 @@ public class TestByteBuffer {
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
-    public void testBufferOnClosedScope() {
+    public void testBufferOnClosedSession() {
         MemorySegment leaked;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            leaked = MemorySegment.allocateNative(bytes, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            leaked = MemorySegment.allocateNative(bytes, session);
         }
         ByteBuffer byteBuffer = leaked.asByteBuffer(); // ok
         byteBuffer.get(); // should throw
@@ -488,7 +488,7 @@ public class TestByteBuffer {
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testTooBigForByteBuffer() {
-        MemorySegment segment = MemorySegment.ofAddress(MemoryAddress.NULL, Integer.MAX_VALUE + 10L, ResourceScope.newImplicitScope());
+        MemorySegment segment = MemorySegment.ofAddress(MemoryAddress.NULL, Integer.MAX_VALUE + 10L, MemorySession.openImplicit());
         segment.asByteBuffer();
     }
 
@@ -497,7 +497,9 @@ public class TestByteBuffer {
         File f = new File("testNeg1.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), 0L, -1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, -1L, MemorySession.openImplicit());
+        }
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
@@ -505,7 +507,9 @@ public class TestByteBuffer {
         File f = new File("testNeg2.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), -1, 1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, -1L, 1L, MemorySession.openImplicit());
+        }
     }
 
     @Test
@@ -516,8 +520,9 @@ public class TestByteBuffer {
 
         int SIZE = Byte.MAX_VALUE;
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, SIZE, FileChannel.MapMode.READ_WRITE, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, SIZE, session);
             for (byte offset = 0; offset < SIZE; offset++) {
                 segment.set(JAVA_BYTE, offset, offset);
             }
@@ -525,8 +530,9 @@ public class TestByteBuffer {
         }
 
         for (int offset = 0 ; offset < SIZE ; offset++) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), offset, SIZE - offset, FileChannel.MapMode.READ_ONLY, scope);
+            try (MemorySession session = MemorySession.openConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, SIZE - offset, session);
                 assertEquals(segment.get(JAVA_BYTE, 0), offset);
             }
         }
@@ -538,8 +544,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         //RW
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_WRITE, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, session);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertFalse(segment.isReadOnly());
@@ -549,8 +556,9 @@ public class TestByteBuffer {
             segment.unload();
         }
         //RO
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_ONLY, scope);
+        try (MemorySession session = MemorySession.openConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 0L, session);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertTrue(segment.isReadOnly());
@@ -561,18 +569,20 @@ public class TestByteBuffer {
         }
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
+    @Test(expectedExceptions = UnsupportedOperationException.class)
     public void testMapCustomPath() throws IOException {
         Path path = Path.of(URI.create("jrt:/"));
-        MemorySegment.mapFile(path, 0L, 0L, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(path, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, MemorySession.openImplicit());
+        }
     }
 
     @Test(dataProvider="resizeOps")
     public void testCopyHeapToNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(bytes, 1, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment nativeArray = MemorySegment.allocateNative(bytes, 1, session);
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(heapArray);
             nativeArray.copyFrom(heapArray);
@@ -584,8 +594,8 @@ public class TestByteBuffer {
     public void testCopyNativeToHeap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(seq, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment nativeArray = MemorySegment.allocateNative(seq, session);
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(nativeArray);
             heapArray.copyFrom(nativeArray);
@@ -605,6 +615,28 @@ public class TestByteBuffer {
             ByteBuffer roBuffer = rwBuffer.asReadOnlyBuffer();
             MemorySegment segment = MemorySegment.ofByteBuffer(roBuffer);
             assertTrue(segment.isReadOnly());
+        }
+    }
+
+    @Test
+    public void testOfBufferScopeReachable() throws InterruptedException {
+        ByteBuffer buffer = ByteBuffer.allocateDirect(1000);
+        MemorySegment segment = MemorySegment.ofByteBuffer(buffer);
+        try {
+            AtomicBoolean reachable = new AtomicBoolean(true);
+            Cleaner.create().register(buffer, () -> {
+                reachable.set(false);
+            });
+            buffer = null;
+            System.gc();
+            // let's sleep to let cleaner run
+            Thread.sleep(100);
+            segment.get(JAVA_BYTE, 0);
+            if (!reachable.get()) {
+                throw new IllegalStateException();
+            }
+        } finally {
+            Reference.reachabilityFence(segment);
         }
     }
 
@@ -634,8 +666,8 @@ public class TestByteBuffer {
 
     @Test
     public void testRoundTripAccess() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment ms = MemorySegment.allocateNative(4, 1, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment ms = MemorySegment.allocateNative(4, 1, session);
             MemorySegment msNoAccess = ms.asReadOnly();
             MemorySegment msRoundTrip = MemorySegment.ofByteBuffer(msNoAccess.asByteBuffer());
             assertEquals(msNoAccess.isReadOnly(), msRoundTrip.isReadOnly());
@@ -644,23 +676,23 @@ public class TestByteBuffer {
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testDeadAccessOnClosedBufferSegment() {
-        MemorySegment s1 = MemorySegment.allocateNative(JAVA_INT, ResourceScope.newConfinedScope());
+        MemorySegment s1 = MemorySegment.allocateNative(JAVA_INT, MemorySession.openConfined());
         MemorySegment s2 = MemorySegment.ofByteBuffer(s1.asByteBuffer());
 
         // memory freed
-        s1.scope().close();
+        s1.session().close();
 
         s2.set(JAVA_INT, 0, 10); // Dead access!
     }
 
-    @Test(dataProvider = "allScopes")
-    public void testIOOnSegmentBuffer(Supplier<ResourceScope> scopeSupplier) throws IOException {
+    @Test(dataProvider = "allSessions")
+    public void testIOOnSegmentBuffer(Supplier<MemorySession> sessionSupplier) throws IOException {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
-        ResourceScope scope;
+        MemorySession session;
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE) ;
-             ResourceScope scp = closeableScopeOrNull(scope = scopeSupplier.get())) {
-            MemorySegment segment = MemorySegment.allocateNative(10, 1, scope);
+            MemorySession scp = closeableSessionOrNull(session = sessionSupplier.get())) {
+            MemorySegment segment = MemorySegment.allocateNative(10, 1, session);
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
@@ -675,17 +707,17 @@ public class TestByteBuffer {
 
     static final Class<IllegalStateException> ISE = IllegalStateException.class;
 
-    @Test(dataProvider = "closeableScopes")
-    public void testIOOnClosedSegmentBuffer(Supplier<ResourceScope> scopeSupplier) throws IOException {
+    @Test(dataProvider = "closeableSessions")
+    public void testIOOnClosedSegmentBuffer(Supplier<MemorySession> sessionSupplier) throws IOException {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10, scopeSupplier.get());
+            MemorySegment segment = MemorySegment.allocateNative(10, sessionSupplier.get());
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
             ByteBuffer bb = segment.asByteBuffer();
-            segment.scope().close();
+            segment.session().close();
             assertThrows(ISE, () -> channel.read(bb));
             assertThrows(ISE, () -> channel.read(new ByteBuffer[] {bb}));
             assertThrows(ISE, () -> channel.read(new ByteBuffer[] {bb}, 0, 1));
@@ -697,8 +729,8 @@ public class TestByteBuffer {
 
     @Test
     public void buffersAndArraysFromSlices() {
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, scope);
+        try (MemorySession session = MemorySession.openShared()) {
+            MemorySegment segment = MemorySegment.allocateNative(16, session);
             int newSize = 8;
             var slice = segment.asSlice(4, newSize);
 
@@ -715,8 +747,8 @@ public class TestByteBuffer {
 
     @Test
     public void viewsFromSharedSegment() {
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, scope);
+        try (MemorySession session = MemorySession.openShared()) {
+            MemorySegment segment = MemorySegment.allocateNative(16, session);
             var byteBuffer = segment.asByteBuffer();
             byteBuffer.asReadOnlyBuffer();
             byteBuffer.slice(0, 8);
@@ -726,34 +758,31 @@ public class TestByteBuffer {
     @DataProvider(name = "segments")
     public static Object[][] segments() throws Throwable {
         return new Object[][] {
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, ResourceScope.newImplicitScope()) },
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, ResourceScope.newConfinedScope()) },
+                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, MemorySession.openImplicit()) },
+                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, MemorySession.openConfined()) },
                 { (Supplier<MemorySegment>) () -> MemorySegment.ofArray(new byte[16]) }
         };
     }
 
-    @DataProvider(name = "closeableScopes")
-    public static Object[][] closeableScopes() {
+    @DataProvider(name = "closeableSessions")
+    public static Object[][] closeableSessions() {
         return new Object[][] {
-                { (Supplier<ResourceScope>) () -> ResourceScope.newSharedScope()   },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newConfinedScope() },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newSharedScope(Cleaner.create())   },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newConfinedScope(Cleaner.create()) },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newImplicitScope() }
+                { (Supplier<MemorySession>) () -> MemorySession.openShared()   },
+                { (Supplier<MemorySession>) () -> MemorySession.openConfined() },
+                { (Supplier<MemorySession>) () -> MemorySession.openShared(Cleaner.create())   },
+                { (Supplier<MemorySession>) () -> MemorySession.openConfined(Cleaner.create()) },
         };
     }
 
-    @DataProvider(name = "allScopes")
-    public static Object[][] allScopes() {
-        return Stream.of(new Object[][] { { (Supplier<ResourceScope>)ResourceScope::globalScope } }, closeableScopes())
+    @DataProvider(name = "allSessions")
+    public static Object[][] allSessions() {
+        return Stream.of(new Object[][] { { (Supplier<MemorySession>) MemorySession::global} }, closeableSessions())
                 .flatMap(Arrays::stream)
                 .toArray(Object[][]::new);
     }
 
-    static ResourceScope closeableScopeOrNull(ResourceScope scope) {
-        if (scope == ResourceScope.globalScope())
-            return null;
-        return scope;
+    static MemorySession closeableSessionOrNull(MemorySession session) {
+        return session.isCloseable() ? session : null;
     }
 
     @DataProvider(name = "bufferOps")
@@ -816,32 +845,32 @@ public class TestByteBuffer {
         Consumer<MemorySegment> byteInitializer =
                 (base) -> initBytes(base, bytes, (addr, pos) -> addr.set(JAVA_BYTE, pos, (byte)(long)pos));
         Consumer<MemorySegment> charInitializer =
-                (base) -> initBytes(base, chars, (addr, pos) -> addr.setAtIndex(JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN), pos, (char)(long)pos));
+                (base) -> initBytes(base, chars, (addr, pos) -> addr.setAtIndex(BB_CHAR, pos, (char)(long)pos));
         Consumer<MemorySegment> shortInitializer =
-                (base) -> initBytes(base, shorts, (addr, pos) -> addr.setAtIndex(JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN), pos, (short)(long)pos));
+                (base) -> initBytes(base, shorts, (addr, pos) -> addr.setAtIndex(BB_SHORT, pos, (short)(long)pos));
         Consumer<MemorySegment> intInitializer =
-                (base) -> initBytes(base, ints, (addr, pos) -> addr.setAtIndex(JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN), pos, (int)(long)pos));
+                (base) -> initBytes(base, ints, (addr, pos) -> addr.setAtIndex(BB_INT, pos, (int)(long)pos));
         Consumer<MemorySegment> floatInitializer =
-                (base) -> initBytes(base, floats, (addr, pos) -> addr.setAtIndex(JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN), pos, (float)(long)pos));
+                (base) -> initBytes(base, floats, (addr, pos) -> addr.setAtIndex(BB_FLOAT, pos, (float)(long)pos));
         Consumer<MemorySegment> longInitializer =
-                (base) -> initBytes(base, longs, (addr, pos) -> addr.setAtIndex(JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN), pos, (long)pos));
+                (base) -> initBytes(base, longs, (addr, pos) -> addr.setAtIndex(BB_LONG, pos, (long)pos));
         Consumer<MemorySegment> doubleInitializer =
-                (base) -> initBytes(base, doubles, (addr, pos) -> addr.setAtIndex(JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN), pos, (double)(long)pos));
+                (base) -> initBytes(base, doubles, (addr, pos) -> addr.setAtIndex(BB_DOUBLE, pos, (double)(long)pos));
 
         Consumer<MemorySegment> byteChecker =
                 (base) -> checkBytes(base, bytes, Function.identity(), (addr, pos) -> addr.get(JAVA_BYTE, pos), ByteBuffer::get);
         Consumer<MemorySegment> charChecker =
-                (base) -> checkBytes(base, chars, ByteBuffer::asCharBuffer, (addr, pos) -> addr.getAtIndex(JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN), pos), CharBuffer::get);
+                (base) -> checkBytes(base, chars, ByteBuffer::asCharBuffer, (addr, pos) -> addr.getAtIndex(BB_CHAR, pos), CharBuffer::get);
         Consumer<MemorySegment> shortChecker =
-                (base) -> checkBytes(base, shorts, ByteBuffer::asShortBuffer, (addr, pos) -> addr.getAtIndex(JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN), pos), ShortBuffer::get);
+                (base) -> checkBytes(base, shorts, ByteBuffer::asShortBuffer, (addr, pos) -> addr.getAtIndex(BB_SHORT, pos), ShortBuffer::get);
         Consumer<MemorySegment> intChecker =
-                (base) -> checkBytes(base, ints, ByteBuffer::asIntBuffer, (addr, pos) -> addr.getAtIndex(JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN), pos), IntBuffer::get);
+                (base) -> checkBytes(base, ints, ByteBuffer::asIntBuffer, (addr, pos) -> addr.getAtIndex(BB_INT, pos), IntBuffer::get);
         Consumer<MemorySegment> floatChecker =
-                (base) -> checkBytes(base, floats, ByteBuffer::asFloatBuffer, (addr, pos) -> addr.getAtIndex(JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN), pos), FloatBuffer::get);
+                (base) -> checkBytes(base, floats, ByteBuffer::asFloatBuffer, (addr, pos) -> addr.getAtIndex(BB_FLOAT, pos), FloatBuffer::get);
         Consumer<MemorySegment> longChecker =
-                (base) -> checkBytes(base, longs, ByteBuffer::asLongBuffer, (addr, pos) -> addr.getAtIndex(JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN), pos), LongBuffer::get);
+                (base) -> checkBytes(base, longs, ByteBuffer::asLongBuffer, (addr, pos) -> addr.getAtIndex(BB_LONG, pos), LongBuffer::get);
         Consumer<MemorySegment> doubleChecker =
-                (base) -> checkBytes(base, doubles, ByteBuffer::asDoubleBuffer, (addr, pos) -> addr.getAtIndex(JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN), pos), DoubleBuffer::get);
+                (base) -> checkBytes(base, doubles, ByteBuffer::asDoubleBuffer, (addr, pos) -> addr.getAtIndex(BB_DOUBLE, pos), DoubleBuffer::get);
 
         return new Object[][]{
                 {byteChecker, byteInitializer, bytes},
